# Detect-It-Easy

./: Dockerfile  entrypoint.py  pyproject.toml  run_diec.sh
