[project]
name = "die-fork"
version = "0.1.0"
description = ""
authors = [
    {name = "anonymous",email = "anonymous@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
